Added Burrito data file and png. And the Gamma prior values

--- a/Stat 440.Rmd
+++ b/Stat 440.Rmd
@@ -41,9 +41,15 @@ $$Y|\beta, \sigma^{-2} \sim MVN(\textbf{X}\beta,\sigma^{-2}\textbf{I})$$
 
 $$\beta \sim MVN(\mu,\tau^{2}\textbf{I})$$
 
+$\mu$ = mean
+
+
 $$\sigma^{-2} \sim Gamma(a,b)$$
 
 
+
+a = .1
+b =.1
 
 
 
