--- a/Stat 440.Rmd
+++ b/Stat 440.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Stat 440"
-author: "Group B: Matthew Bayley , Oki Ogbe, Sabrina Pribly"
+title: "Project Proposal"
+author: "Group B: Matthew Bayley , Oki Ogbe, Sabrina Pribyl"
 date: "4/12/2020"
 output: html_document
 ---
