Changed model 2. Now it only has the variables from the proposal.

--- a/Stat 440 draft.Rmd
+++ b/Stat 440 draft.Rmd
@@ -165,7 +165,8 @@ hist(fit$random)
 
 mod2fit$varcomp
 mod2fit$table
-beta_1 = mod2fit$beta[,2]
-plot(beta_1, type="l")
+beta_1 = mod2fit$beta[6,2]
+#plot(beta_1, type="l")
+
 ```
 
